Add paper.md with an article about spring proxy
Signed-off-by: Nikita Eshkeev <neshkeev@yandex.ru>

--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.neshkeev.spring</groupId>
-    <artifactId>spring-magic</artifactId>
+    <artifactId>spring-proxy-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>spring-magic</name>
+    <name>spring-proxy-demo</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
